--- a/usage_statistics_webtalk.html
+++ b/usage_statistics_webtalk.html
@@ -4,10 +4,10 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2258646</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Thu Oct  4 18:42:40 2018</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Thu Oct  4 18:52:32 2018</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>LIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2018.2 (64-bit)</TD>
-  <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>bec35439aee44affad31130055d394c6</TD>
+  <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>cfd2a11010c34658866aabdd14457912</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>1</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>d0442cc1a52c5f5c819a4c2fc4d09ee9</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>176088829_174179593_210688535_628</TD>
@@ -21,7 +21,7 @@
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>user_environment</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>Intel(R) Xeon(R) CPU E5-1650 v4 @ 3.60GHz</TD>
-  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>1291.843 MHz</TD>
+  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>1279.079 MHz</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>os_name</B></TD><TD>Debian</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_release</B></TD><TD>Debian GNU/Linux rodete (upgraded from: Ubuntu 14.04.5 LTS)</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>67.000 GB</TD>
@@ -148,6 +148,19 @@
     <TD>-vhfn=default::[not_specified]</TD>
 </TR>   </TABLE>
    </TD></TR>
+   <TR><TD>
+   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
+    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
+<TR ALIGN='LEFT'>    <TD>postths=0.000000</TD>
+    <TD>posttns=0.000000</TD>
+    <TD>postwhs=0.051206</TD>
+    <TD>postwns=0.065207</TD>
+</TR><TR ALIGN='LEFT'>    <TD>preths=0.000000</TD>
+    <TD>pretns=-0.013444</TD>
+    <TD>prewhs=0.051206</TD>
+    <TD>prewns=-0.013444</TD>
+</TR>   </TABLE>
+   </TD></TR>
   </TABLE><BR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='1'><B>power_opt_design</B></TD></TR>
@@ -233,8 +246,8 @@
     <TD>bidir_output_enable=1.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>board_layers=12to15 (12 to 15 Layers)</TD>
     <TD>board_selection=medium (10&quot;x10&quot;)</TD>
-    <TD>bram=0.007982</TD>
-    <TD>clocks=0.015665</TD>
+    <TD>bram=0.007981</TD>
+    <TD>clocks=0.016841</TD>
 </TR><TR ALIGN='LEFT'>    <TD>confidence_level_clock_activity=High</TD>
     <TD>confidence_level_design_state=High</TD>
     <TD>confidence_level_device_models=High</TD>
@@ -243,10 +256,10 @@
     <TD>confidence_level_overall=Low</TD>
     <TD>customer=TBD</TD>
     <TD>customer_class=TBD</TD>
-</TR><TR ALIGN='LEFT'>    <TD>devstatic=0.072955</TD>
+</TR><TR ALIGN='LEFT'>    <TD>devstatic=0.072959</TD>
     <TD>die=xc7a35tcsg324-1</TD>
     <TD>dsp_output_toggle=12.500000</TD>
-    <TD>dynamic=0.170470</TD>
+    <TD>dynamic=0.172065</TD>
 </TR><TR ALIGN='LEFT'>    <TD>effective_thetaja=4.8</TD>
     <TD>enable_probability=0.990000</TD>
     <TD>family=artix7</TD>
@@ -256,7 +269,7 @@
     <TD>i/o=0.000883</TD>
     <TD>input_toggle=12.500000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>junction_temp=26.2 (C)</TD>
-    <TD>logic=0.005113</TD>
+    <TD>logic=0.005199</TD>
     <TD>mgtavcc_dynamic_current=0.000000</TD>
     <TD>mgtavcc_static_current=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>mgtavcc_total_current=0.000000</TD>
@@ -267,7 +280,7 @@
     <TD>mgtavtt_voltage=1.200000</TD>
     <TD>netlist_net_matched=NA</TD>
     <TD>off-chip_power=0.000000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>on-chip_power=0.243426</TD>
+</TR><TR ALIGN='LEFT'>    <TD>on-chip_power=0.245024</TD>
     <TD>output_enable=1.000000</TD>
     <TD>output_load=5.000000</TD>
     <TD>output_toggle=12.500000</TD>
@@ -282,7 +295,7 @@
 </TR><TR ALIGN='LEFT'>    <TD>read_saif=False</TD>
     <TD>set/reset_probability=0.000000</TD>
     <TD>signal_rate=False</TD>
-    <TD>signals=0.007293</TD>
+    <TD>signals=0.007627</TD>
 </TR><TR ALIGN='LEFT'>    <TD>simulation_file=None</TD>
     <TD>speedgrade=-1</TD>
     <TD>static_prob=False</TD>
@@ -304,16 +317,16 @@
     <TD>vccaux_io_static_current=0.000000</TD>
     <TD>vccaux_io_total_current=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccaux_io_voltage=1.800000</TD>
-    <TD>vccaux_static_current=0.012636</TD>
-    <TD>vccaux_total_current=0.081418</TD>
+    <TD>vccaux_static_current=0.012637</TD>
+    <TD>vccaux_total_current=0.081419</TD>
     <TD>vccaux_voltage=1.800000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccbram_dynamic_current=0.000414</TD>
-    <TD>vccbram_static_current=0.000618</TD>
+    <TD>vccbram_static_current=0.000619</TD>
     <TD>vccbram_total_current=0.001033</TD>
     <TD>vccbram_voltage=1.000000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccint_dynamic_current=0.044080</TD>
-    <TD>vccint_static_current=0.010291</TD>
-    <TD>vccint_total_current=0.054372</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccint_dynamic_current=0.045675</TD>
+    <TD>vccint_static_current=0.010294</TD>
+    <TD>vccint_total_current=0.055970</TD>
     <TD>vccint_voltage=1.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vcco12_dynamic_current=0.000000</TD>
     <TD>vcco12_static_current=0.000000</TD>
@@ -509,8 +522,8 @@
     <TD>lut_as_distributed_ram_used=176</TD>
     <TD>lut_as_logic_available=20800</TD>
     <TD>lut_as_logic_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=5030</TD>
-    <TD>lut_as_logic_util_percentage=24.18</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=5048</TD>
+    <TD>lut_as_logic_util_percentage=24.27</TD>
     <TD>lut_as_memory_available=9600</TD>
     <TD>lut_as_memory_fixed=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_used=176</TD>
@@ -527,8 +540,8 @@
     <TD>register_as_latch_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_luts_available=20800</TD>
     <TD>slice_luts_fixed=0</TD>
-    <TD>slice_luts_used=5206</TD>
-    <TD>slice_luts_util_percentage=25.03</TD>
+    <TD>slice_luts_used=5224</TD>
+    <TD>slice_luts_util_percentage=25.12</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_registers_available=41600</TD>
     <TD>slice_registers_fixed=0</TD>
     <TD>slice_registers_used=2113</TD>
@@ -539,8 +552,8 @@
     <TD>lut_as_distributed_ram_used=176</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_available=20800</TD>
     <TD>lut_as_logic_fixed=0</TD>
-    <TD>lut_as_logic_used=5030</TD>
-    <TD>lut_as_logic_util_percentage=24.18</TD>
+    <TD>lut_as_logic_used=5048</TD>
+    <TD>lut_as_logic_util_percentage=24.27</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_available=9600</TD>
     <TD>lut_as_memory_fixed=0</TD>
     <TD>lut_as_memory_used=176</TD>
@@ -548,21 +561,21 @@
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_shift_register_fixed=0</TD>
     <TD>lut_as_shift_register_used=0</TD>
     <TD>lut_ff_pairs_with_one_unused_flip_flop_fixed=0</TD>
-    <TD>lut_ff_pairs_with_one_unused_flip_flop_used=1622</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_ff_pairs_with_one_unused_lut_output_fixed=1622</TD>
-    <TD>lut_ff_pairs_with_one_unused_lut_output_used=1619</TD>
+    <TD>lut_ff_pairs_with_one_unused_flip_flop_used=1600</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_ff_pairs_with_one_unused_lut_output_fixed=1600</TD>
+    <TD>lut_ff_pairs_with_one_unused_lut_output_used=1632</TD>
     <TD>lut_flip_flop_pairs_available=20800</TD>
     <TD>lut_flip_flop_pairs_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_flip_flop_pairs_used=1660</TD>
-    <TD>lut_flip_flop_pairs_util_percentage=7.98</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_flip_flop_pairs_used=1654</TD>
+    <TD>lut_flip_flop_pairs_util_percentage=7.95</TD>
     <TD>slice_available=8150</TD>
     <TD>slice_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>slice_used=1602</TD>
-    <TD>slice_util_percentage=19.66</TD>
+</TR><TR ALIGN='LEFT'>    <TD>slice_used=1632</TD>
+    <TD>slice_util_percentage=20.02</TD>
     <TD>slicel_fixed=0</TD>
-    <TD>slicel_used=1081</TD>
+    <TD>slicel_used=1134</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slicem_fixed=0</TD>
-    <TD>slicem_used=521</TD>
+    <TD>slicem_used=498</TD>
     <TD>unique_control_sets_used=94</TD>
     <TD>using_o5_and_o6_fixed=94</TD>
 </TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_used=0</TD>
@@ -619,7 +632,7 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>actual_expansions=5160563</TD>
+<TR ALIGN='LEFT'>    <TD>actual_expansions=5064203</TD>
     <TD>bogomips=7182</TD>
     <TD>bram18=2</TD>
     <TD>bram36=18</TD>
@@ -629,7 +642,7 @@
     <TD>ctrls=94</TD>
 </TR><TR ALIGN='LEFT'>    <TD>dsp=0</TD>
     <TD>effort=2</TD>
-    <TD>estimated_expansions=6184566</TD>
+    <TD>estimated_expansions=6112146</TD>
     <TD>ff=2113</TD>
 </TR><TR ALIGN='LEFT'>    <TD>global_clocks=1</TD>
     <TD>high_fanout_nets=4</TD>
